--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     //firebase database
     compile 'com.google.firebase:firebase-database:10.2.6'
 
+    //firebase storage
+    compile 'com.google.firebase:firebase-storage:10.2.6'
+
 }
 
 //Firebase
