--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,55 +1,44 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 29
+    buildToolsVersion "29.0.3"
+
     defaultConfig {
-        applicationId "com.stephanie.instagramclone"
-        minSdkVersion 18
-        targetSdkVersion 25
+        applicationId "com.seoullo.seoullotour"
+        minSdkVersion 21
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    //Design library for Coordinator Layout and Toolbars
-    compile 'com.android.support:design:25.3.1'
-
-    //BottomNavigationViewEx library
-    compile 'com.github.ittianyu:BottomNavigationViewEx:1.1.9'
-
-    //Circle ImageView
-    compile 'de.hdodenhof:circleimageview:2.1.0'
-
-    //Universal image loader
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-
-    //firebase authentication
-    compile 'com.google.firebase:firebase-auth:10.2.6'
-
-    //firebase database
-    compile 'com.google.firebase:firebase-database:10.2.6'
-
-    //firebase storage
-    compile 'com.google.firebase:firebase-storage:10.2.6'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
+    implementation 'com.google.firebase:firebase-database:19.3.0'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation 'com.github.ittianyu:BottomNavigationViewEx:2.0.4'
+    implementation 'com.google.android.material:material:1.1.0'
 
 }
-
-//Firebase
-apply plugin: 'com.google.gms.google-services'
